// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon should allow configuring the icon as directionAware 1`] = `
<FontAwesomeIcon
  flip={null}
  icon="angle-left"
/>
`;

exports[`Icon should allow configuring the icon as directionAware 2`] = `
<FontAwesomeIcon
  flip="horizontal"
  icon="angle-left"
/>
`;

exports[`Icon should instantiate a FontAwesomeIcon 1`] = `
<FontAwesomeIcon
  flip={null}
  icon="angle-right"
  size="xs"
/>
`;
